parser/.antlr/PCREParser.java
// Generated from /home/yuta/repos/plmfa-based-regex/parser/PCREParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PCREParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BSlash=1, Dollar=2, Dot=3, OBrack=4, Caret=5, Pipe=6, QMark=7, Star=8, 
		Plus=9, OBrace=10, CBrace=11, OPar=12, CPar=13, CBrack=14, OPosixBrack=15, 
		CPosixBrack=16, Comma=17, Dash=18, UScore=19, Eq=20, Amp=21, Lt=22, Gt=23, 
		Quote=24, Col=25, Hash=26, Excl=27, Au=28, Bu=29, Cu=30, Du=31, Eu=32, 
		Fu=33, Gu=34, Hu=35, Iu=36, Ju=37, Ku=38, Lu=39, Mu=40, Nu=41, Ou=42, 
		Pu=43, Qu=44, Ru=45, Su=46, Tu=47, Uu=48, Vu=49, Wu=50, Xu=51, Yu=52, 
		Zu=53, Al=54, Bl=55, Cl=56, Dl=57, El=58, Fl=59, Gl=60, Hl=61, Il=62, 
		Jl=63, Kl=64, Ll=65, Ml=66, Nl=67, Ol=68, Pl=69, Ql=70, Rl=71, Sl=72, 
		Tl=73, Ul=74, Vl=75, Wl=76, Xl=77, Yl=78, Zl=79, D0=80, D1=81, D2=82, 
		D3=83, D4=84, D5=85, D6=86, D7=87, D8=88, D9=89, OTHER=90;
	public static final int
		RULE_pcre = 0, RULE_alternation = 1, RULE_expr = 2, RULE_element = 3, 
		RULE_atom = 4, RULE_capture = 5, RULE_atomic_group = 6, RULE_lookaround = 7, 
		RULE_backreference = 8, RULE_subroutine_reference = 9, RULE_conditional_pattern = 10, 
		RULE_comment = 11, RULE_quantifier = 12, RULE_option_setting = 13, RULE_option_setting_flag = 14, 
		RULE_backtracking_control = 15, RULE_callout = 16, RULE_newline_conventions = 17, 
		RULE_character = 18, RULE_character_type = 19, RULE_character_class = 20, 
		RULE_character_class_atom = 21, RULE_character_class_range = 22, RULE_character_class_range_atom = 23, 
		RULE_posix_character_class = 24, RULE_anchor = 25, RULE_match_point_reset = 26, 
		RULE_quoting = 27, RULE_digits = 28, RULE_digit = 29, RULE_hex = 30, RULE_letters = 31, 
		RULE_letter = 32, RULE_name = 33, RULE_other = 34, RULE_utf = 35, RULE_ucp = 36, 
		RULE_no_auto_possess = 37, RULE_no_start_opt = 38, RULE_cr = 39, RULE_lf = 40, 
		RULE_crlf = 41, RULE_anycrlf = 42, RULE_any = 43, RULE_limit_match = 44, 
		RULE_limit_recursion = 45, RULE_bsr_anycrlf = 46, RULE_bsr_unicode = 47, 
		RULE_accept = 48, RULE_fail = 49, RULE_mark = 50, RULE_commit = 51, RULE_prune = 52, 
		RULE_skip = 53, RULE_then = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"pcre", "alternation", "expr", "element", "atom", "capture", "atomic_group", 
			"lookaround", "backreference", "subroutine_reference", "conditional_pattern", 
			"comment", "quantifier", "option_setting", "option_setting_flag", "backtracking_control", 
			"callout", "newline_conventions", "character", "character_type", "character_class", 
			"character_class_atom", "character_class_range", "character_class_range_atom", 
			"posix_character_class", "anchor", "match_point_reset", "quoting", "digits", 
			"digit", "hex", "letters", "letter", "name", "other", "utf", "ucp", "no_auto_possess", 
			"no_start_opt", "cr", "lf", "crlf", "anycrlf", "any", "limit_match", 
			"limit_recursion", "bsr_anycrlf", "bsr_unicode", "accept", "fail", "mark", 
			"commit", "prune", "skip", "then"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\'", "'$'", "'.'", "'['", "'^'", "'|'", "'?'", "'*'", "'+'", 
			"'{'", "'}'", "'('", "')'", "']'", "'[:'", "':]'", "','", "'-'", "'_'", 
			"'='", "'&'", "'<'", "'>'", "'''", "':'", "'#'", "'!'", "'A'", "'B'", 
			"'C'", "'D'", "'E'", "'F'", "'G'", "'H'", "'I'", "'J'", "'K'", "'L'", 
			"'M'", "'N'", "'O'", "'P'", "'Q'", "'R'", "'S'", "'T'", "'U'", "'V'", 
			"'W'", "'X'", "'Y'", "'Z'", "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", 
			"'g'", "'h'", "'i'", "'j'", "'k'", "'l'", "'m'", "'n'", "'o'", "'p'", 
			"'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", "'x'", "'y'", "'z'", 
			"'0'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BSlash", "Dollar", "Dot", "OBrack", "Caret", "Pipe", "QMark", 
			"Star", "Plus", "OBrace", "CBrace", "OPar", "CPar", "CBrack", "OPosixBrack", 
			"CPosixBrack", "Comma", "Dash", "UScore", "Eq", "Amp", "Lt", "Gt", "Quote", 
			"Col", "Hash", "Excl", "Au", "Bu", "Cu", "Du", "Eu", "Fu", "Gu", "Hu", 
			"Iu", "Ju", "Ku", "Lu", "Mu", "Nu", "Ou", "Pu", "Qu", "Ru", "Su", "Tu", 
			"Uu", "Vu", "Wu", "Xu", "Yu", "Zu", "Al", "Bl", "Cl", "Dl", "El", "Fl", 
			"Gl", "Hl", "Il", "Jl", "Kl", "Ll", "Ml", "Nl", "Ol", "Pl", "Ql", "Rl", 
			"Sl", "Tl", "Ul", "Vl", "Wl", "Xl", "Yl", "Zl", "D0", "D1", "D2", "D3", 
			"D4", "D5", "D6", "D7", "D8", "D9", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PCREParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PCREParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PcreContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PCREParser.EOF, 0); }
		public AlternationContext alternation() {
			return getRuleContext(AlternationContext.class,0);
		}
		public PcreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pcre; }
	}

	public final PcreContext pcre() throws RecognitionException {
		PcreContext _localctx = new PcreContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pcre);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -75714L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 134217727L) != 0)) {
				{
				setState(110);
				alternation();
				}
			}

			setState(113);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlternationContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Pipe() { return getTokens(PCREParser.Pipe); }
		public TerminalNode Pipe(int i) {
			return getToken(PCREParser.Pipe, i);
		}
		public AlternationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternation; }
	}

	public final AlternationContext alternation() throws RecognitionException {
		AlternationContext _localctx = new AlternationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_alternation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			expr();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Pipe) {
				{
				{
				setState(116);
				match(Pipe);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -75714L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 134217727L) != 0)) {
					{
					setState(117);
					expr();
					}
				}

				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				element();
				}
				}
				setState(128); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -75714L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 134217727L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			atom();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1920L) != 0)) {
				{
				setState(131);
				quantifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomContext extends ParserRuleContext {
		public Option_settingContext option_setting() {
			return getRuleContext(Option_settingContext.class,0);
		}
		public Backtracking_controlContext backtracking_control() {
			return getRuleContext(Backtracking_controlContext.class,0);
		}
		public CalloutContext callout() {
			return getRuleContext(CalloutContext.class,0);
		}
		public CaptureContext capture() {
			return getRuleContext(CaptureContext.class,0);
		}
		public Atomic_groupContext atomic_group() {
			return getRuleContext(Atomic_groupContext.class,0);
		}
		public LookaroundContext lookaround() {
			return getRuleContext(LookaroundContext.class,0);
		}
		public BackreferenceContext backreference() {
			return getRuleContext(BackreferenceContext.class,0);
		}
		public Subroutine_referenceContext subroutine_reference() {
			return getRuleContext(Subroutine_referenceContext.class,0);
		}
		public Conditional_patternContext conditional_pattern() {
			return getRuleContext(Conditional_patternContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public CharacterContext character() {
			return getRuleContext(CharacterContext.class,0);
		}
		public Character_typeContext character_type() {
			return getRuleContext(Character_typeContext.class,0);
		}
		public Character_classContext character_class() {
			return getRuleContext(Character_classContext.class,0);
		}
		public Posix_character_classContext posix_character_class() {
			return getRuleContext(Posix_character_classContext.class,0);
		}
		public LetterContext letter() {
			return getRuleContext(LetterContext.class,0);
		}
		public DigitContext digit() {
			return getRuleContext(DigitContext.class,0);
		}
		public AnchorContext anchor() {
			return getRuleContext(AnchorContext.class,0);
		}
		public Match_point_resetContext match_point_reset() {
			return getRuleContext(Match_point_resetContext.class,0);
		}
		public QuotingContext quoting() {
			return getRuleContext(QuotingContext.class,0);
		}
		public OtherContext other() {
			return getRuleContext(OtherContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atom);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				option_setting();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				backtracking_control();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				callout();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				capture();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				atomic_group();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(139);
				lookaround();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(140);
				backreference();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(141);
				subroutine_reference();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(142);
				conditional_pattern();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(143);
				comment();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(144);
				character();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(145);
				character_type();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(146);
				character_class();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(147);
				posix_character_class();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(148);
				letter();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(149);
				digit();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(150);
				anchor();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(151);
				match_point_reset();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(152);
				quoting();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(153);
				other();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CaptureContext extends ParserRuleContext {
		public TerminalNode OPar() { return getToken(PCREParser.OPar, 0); }
		public TerminalNode CPar() { return getToken(PCREParser.CPar, 0); }
		public AlternationContext alternation() {
			return getRuleContext(AlternationContext.class,0);
		}
		public TerminalNode QMark() { return getToken(PCREParser.QMark, 0); }
		public TerminalNode Lt() { return getToken(PCREParser.Lt, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode Gt() { return getToken(PCREParser.Gt, 0); }
		public List<TerminalNode> Quote() { return getTokens(PCREParser.Quote); }
		public TerminalNode Quote(int i) {
			return getToken(PCREParser.Quote, i);
		}
		public TerminalNode Pu() { return getToken(PCREParser.Pu, 0); }
		public TerminalNode Col() { return getToken(PCREParser.Col, 0); }
		public TerminalNode Pipe() { return getToken(PCREParser.Pipe, 0); }
		public List<Option_setting_flagContext> option_setting_flag() {
			return getRuleContexts(Option_setting_flagContext.class);
		}
		public Option_setting_flagContext option_setting_flag(int i) {
			return getRuleContext(Option_setting_flagContext.class,i);
		}
		public TerminalNode Dash() { return getToken(PCREParser.Dash, 0); }
		public CaptureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_capture; }
	}
